fixed scroll on mobile

--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -395,8 +395,8 @@
     #our-partners {
 	img {
 	    width: 100%;
-	    margin-right: 5%;
-	    margin-left: 5%;
+	    margin-right: 0;
+	    margin-left: 0;
 	}
     }
 
